--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "bootstrap-material-datetimepicker": "^2.7.3",
     "bootstrap-material-design": "^4.1.1",
     "flatpickr": "^4.5.2",
+    "gulp-minify-css": "^1.2.4",
     "jquery": "^3.3.1",
+    "live-server": "^1.2.1",
     "moment": "^2.24.0"
   },
   "devDependencies": {
